apps/prometheus/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway-prometheus
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "prometheus.127.0.0.1.nip.io"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-vs-prometheus
  namespace: istio-system
spec:
  hosts:
  - "prometheus.127.0.0.1.nip.io"
  gateways:
  - istio-gateway-prometheus
  http:
  - name: 'prometheus-route'
    match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9090
        host: prometheus
